fixed relative urls for github

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <title>
       Transaction Sim
     </title>  
-    <link rel="stylesheet" type="text/css" href="/easyui/themes/icon.css">
-    <link rel="stylesheet" type="text/css" href="/easyui/themes/color.css">
-    <link rel="stylesheet" type="text/css" href="/css/easyui.css">
-    <link rel="stylesheet" type="text/css" href="/css/studio.css">
+    <link rel="stylesheet" type="text/css" href="easyui/themes/icon.css">
+    <link rel="stylesheet" type="text/css" href="easyui/themes/color.css">
+    <link rel="stylesheet" type="text/css" href="css/easyui.css">
+    <link rel="stylesheet" type="text/css" href="css/studio.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.6.min.js"></script>
-    <script type="text/javascript" src="/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="easyui/jquery.easyui.min.js"></script>
   </head>
   <body>
     <div id="layoutMain" class="easyui-layout" style="width:100%;height:100%">
