--- a/transactionsim.html
+++ b/transactionsim.html
@@ -3,12 +3,12 @@
     <title>
       Transaction Sim
     </title>  
-    <link rel="stylesheet" type="text/css" href="/easyui/themes/icon.css">
-    <link rel="stylesheet" type="text/css" href="/easyui/themes/color.css">
-    <link rel="stylesheet" type="text/css" href="/css/easyui.css">
-    <link rel="stylesheet" type="text/css" href="/css/studio.css">
+    <link rel="stylesheet" type="text/css" href="easyui/themes/icon.css">
+    <link rel="stylesheet" type="text/css" href="easyui/themes/color.css">
+    <link rel="stylesheet" type="text/css" href="css/easyui.css">
+    <link rel="stylesheet" type="text/css" href="css/studio.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.6.min.js"></script>
-    <script type="text/javascript" src="/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="easyui/jquery.easyui.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.0/mustache.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
   	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
